# barrioscout

./: .env.example  .gcloudignore  .gitignore  BACKLOG.md  CLAUDE.md  DECISIONS.md  README.md  cf_requirements.txt  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
cloud_functions/: deploy.sh
config/: settings.py
dashboard/: app.py  data_loader.py  detail_panel.py  map_component.py  requirements.txt
dataform/: workflow_settings.yaml
dataform/includes/: constants.js
definitions/marts/: agg_neighborhood_scores.sqlx  dim_neighborhoods.sqlx
definitions/sources/: ine_income.sqlx  listing_status_checks.sqlx  mtr_appraised_value.sqlx  mtr_transactions.sqlx  osm_pois.sqlx
definitions/staging/: stg_catastro_buildings.sqlx  stg_idealista_listings.sqlx  stg_neighborhoods.sqlx  stg_osm_pois.sqlx
notebooks/: exploration.ipynb
reports/: audit_email_fields.py  fetch_email_samples.py  granada_transport_gap.md  idealista_parser_diagnosis.md  phase3_status_report.md  raw_data_profiling.md  scoring_feasibility.md
scripts/: download_municipal_polygons.py  fix_4_bad_geocodes.py  fix_voronoi_overlaps.py  generate_cluster_subdivisions.py  generate_voronoi_subdivisions.py  ingest_ine_distritos.py  ingest_osm_tier_a.py  regeocode_with_google.py
sql/schemas/: README.md  raw_catastro_buildings.sql  raw_idealista_listings.sql  raw_ine_ipv.sql  raw_ine_renta.sql  raw_ministerio_transacciones.sql  (+3 more)
tests/: test_catastro_pipeline.py  test_ine_ipv_pipeline.py  test_ine_pipeline.py  test_neighborhoods_pipeline.py  test_sources.py
(+19 files in other folders)
