[project]
name = "barrioscout"
version = "0.1.0"
description = "Real estate intelligence for Spanish neighbourhoods"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "google-cloud-bigquery",
    "streamlit",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
